<resources>
    <string name="app_name">AndroidWeather</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="temp">- C</string>
    <string name="min_max_temp">-C/-C</string>
    <string name="weather_description">No information</string>
    <string name="settings">Settings</string>
    <string name="preference_file_key">prefs</string>
    <string name="current_city_id">current_city_id</string>
    <string name="title_app_name">Android Weather</string>
</resources>
