<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/default_text_size" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings_black_48dp" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_city_name"

        android:layout_margin="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_loop_black_48dp" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/weather_icon"
        android:layout_centerHorizontal="true"

        android:text="@string/temp"
        android:textSize="@dimen/main_temp_text_size" />

    <TextView
        android:id="@+id/tv_max_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_temp"

        android:layout_centerHorizontal="true"
        android:text="@string/min_max_temp"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/tv_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_max_min_temp"

        android:layout_centerHorizontal="true"
        android:text="@string/weather_description"
        android:textSize="@dimen/default_text_size" />

</RelativeLayout>
